fix layout (no line wrap, full height, proper scrollbars, etc.)

--- a/src/app/modules/details/test-exec-details.component.css
+++ b/src/app/modules/details/test-exec-details.component.css
@@ -5,3 +5,18 @@ img {
     border: 1px solid grey;
     cursor: pointer;
 }
+
+div#test-exec-details, tab#log-tab {
+    height: 100%
+}
+
+textarea#log-textarea {
+    height: 100%;
+    width: 100%;
+    white-space: nowrap;
+    resize: none
+}
+
+:host ::ng-deep div.tab-content {
+    height: calc(100% - 42px)
+}
